--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<script src="coquette.js"></script>
-<script src="sylvester.js"></script>
-<link href='http://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
+<script src="http://stenington.org/roborampage/coquette.js"></script>
+<link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 <style>
   body {
     text-align: center;
     font-family: "Press Start 2P";
     color: #222;
-    background: url('bkg.gif') 0 / 150px repeat; /* courtesy of http://home.earthlink.net/~hube02/backgrounds1.html */
+    background: url('http://stenington.org/roborampage/bkg.gif') 0 / 150px repeat; 
+    /* bkg courtesy of http://home.earthlink.net/~hube02/backgrounds1.html */
     padding: 1em 0 2em 0;
   }
 
@@ -19,6 +19,19 @@
     animation-duration: 0.2s;
     animation-direction: alternate;
     animation-iteration-count: infinite;
+    -webkit-animation-name: flash;
+    -webkit-animation-duration: 0.2s;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-iteration-count: infinite;
+  }
+  
+  @-webkit-keyframes flash {
+    from {
+      color: #fbc32d;
+    }
+    to {
+      color: #f6e636;
+    }
   }
   @keyframes flash {
     from {
@@ -71,12 +84,16 @@
     animation-duration: 0.2s;
     animation-direction: alternate;
     animation-iteration-count: infinite;
+    -webkit-animation-name: flash;
+    -webkit-animation-duration: 0.2s;
+    -webkit-animation-direction: alternate;
+    -webkit-animation-iteration-count: infinite;
   }
 </style>
 
 <h1>ROBORAMPAGE</h1>
 <div class="container">
-  <canvas id="canvas"></canvas>
+  <canvas id="canvas" tabindex="1"></canvas>
   <h1 id="win" class="result">You win!</h1>
   <h1 id="lose" class="result">You lose.</h1>
 </div>
@@ -93,9 +110,16 @@
   <dd>to teleport</dd>
 </dl>
 
-
 <script>
+// Add a method to Coquette's Maths module
+Coquette.Collider.Maths.scaleVector = function (vector, scale) {
+  return {
+    x: vector.x * scale,
+    y: vector.y * scale
+  };
+};
 
+// Define our entity classes and base classes  
 function Base() {}
 Base.prototype.init = function (game, settings) {
   this.game = game;
@@ -128,17 +152,25 @@ Person.prototype.update = function() {
   }
   else {
     this.warped = false;
-    var v = Vector.create([0, 0, 0]);
-    if (this.c.inputter.isDown(this.c.inputter.UP_ARROW)) v = v.subtract(Vector.j);
-    if (this.c.inputter.isDown(this.c.inputter.DOWN_ARROW)) v = v.add(Vector.j);
-    if (this.c.inputter.isDown(this.c.inputter.LEFT_ARROW)) v = v.subtract(Vector.i);
-    if (this.c.inputter.isDown(this.c.inputter.RIGHT_ARROW)) v = v.add(Vector.i);
+    var v = {x:0, y:0};
+    if (this.c.inputter.isDown(this.c.inputter.UP_ARROW)) v.y += -1;
+    if (this.c.inputter.isDown(this.c.inputter.DOWN_ARROW)) v.y += 1;
+    if (this.c.inputter.isDown(this.c.inputter.LEFT_ARROW)) v.x += -1;
+    if (this.c.inputter.isDown(this.c.inputter.RIGHT_ARROW)) v.x += 1;
 
+    if (!Coquette.Collider.Maths.magnitude(v)) return;
+    
     var speed = this.speed.walk
     if (this.c.inputter.isDown(this.c.inputter.SHIFT)) speed = this.speed.run;
-    v = v.toUnitVector().x(speed);
-    this.center.x += v.dot(Vector.i) || 0;
-    this.center.y += v.dot(Vector.j) || 0;
+    v = Coquette.Collider.Maths.unitVector(v);
+    v = Coquette.Collider.Maths.scaleVector(v, speed);
+    this.center.x += v.x;
+    this.center.y += v.y;
+    
+    this.center.x = Math.max(0, this.center.x);
+    this.center.x = Math.min(this.game.width, this.center.x);
+    this.center.y = Math.max(0, this.center.y);
+    this.center.y = Math.min(this.game.height, this.center.y);
   }
 };
 Person.prototype.collision = function(other, type) {
@@ -149,47 +181,29 @@ function Robot(game, settings) {
   this.size = { x:9, y:9 };
   this.init(game, settings);
   this.color = this.colors['alive'];
-
-  this.strategies = {
-    direct: function directAttack() {
-      var p = Vector.create([this.target.center.x, this.target.center.y, 0]);
-      var r = Vector.create([this.center.x, this.center.y, 0]);
-      var v = p.subtract(r);
-
-      v = v.toUnitVector().x(this.speed.walk);
-      this.center.x += v.dot(Vector.i) || 0;
-      this.center.y += v.dot(Vector.j) || 0;
-    },
-    compass: function compassAttack() {
-      var x = 0;
-      var y = 0;
-      var dx = this.target.center.x - this.center.x;
-      var dy = this.target.center.y - this.center.y;
-      if (dx < -1) x = -1;
-      else if (dx > 1) x = 1;
-      if (dy < -1) y = -1;
-      else if (dy > 1) y = 1;
-
-      var v = Vector.create([x, y, 0]);
-      v = v.toUnitVector().x(this.speed.walk);
-      this.center.x += v.dot(Vector.i) || 0;
-      this.center.y += v.dot(Vector.j) || 0;
-    }
-  };
-
-  this.strategy = this.strategy || 'direct';
-  this.move = this.strategies[this.strategy];
-  this.wait = function () {};
+  if (this.attackStrategy === 'random') {
+    var names = Object.keys(this.attacks);
+    this.attackStrategy = names[Math.floor(Math.random() * names.length)];
+    console.log(this.attackStrategy, names.length);
+  }
+  if (this.waitStrategy === 'random') {
+    var names = Object.keys(this.waits);
+    this.waitStrategy = names[Math.floor(Math.random() * names.length)];
+    console.log(this.waitStrategy, names.length);
+  }
+  this.move = this.attacks[this.attackStrategy];
+  this.wait = this.waits[this.waitStrategy];
   return this;
-}
+};
 Robot.prototype = new Base();
 Robot.prototype.update = function() {
-  if (!this.wreck
-      && (this.c.inputter.isDown(this.c.inputter.UP_ARROW)
+  if (!this.wreck) {
+    if (this.c.inputter.isDown(this.c.inputter.UP_ARROW)
         || this.c.inputter.isDown(this.c.inputter.DOWN_ARROW)
         || this.c.inputter.isDown(this.c.inputter.LEFT_ARROW)
-        || this.c.inputter.isDown(this.c.inputter.RIGHT_ARROW))) this.move();
-  else this.wait();
+        || this.c.inputter.isDown(this.c.inputter.RIGHT_ARROW)) this.move();
+    else this.wait();
+  }
 };
 Robot.prototype.collision = function(other, type) {
   if (other instanceof Robot) {
@@ -197,23 +211,78 @@ Robot.prototype.collision = function(other, type) {
     this.color = this.colors['dead'];
   }
 };
+Robot.prototype.attacks = {
+  direct: function directAttack() {
+    var v = Coquette.Collider.Maths.vectorTo(this.center, this.target.center);    
 
+    v = Coquette.Collider.Maths.unitVector(v);
+    v = Coquette.Collider.Maths.scaleVector(v, this.speed.walk);
+    this.center.x += v.x;
+    this.center.y += v.y;
+  },
+  compass: function compassAttack() {
+    var v = {x:0, y:0};
+    var dx = this.target.center.x - this.center.x;
+    var dy = this.target.center.y - this.center.y;
+    if (dx < -1) v.x = -1;
+    else if (dx > 1) v.x = 1;
+    if (dy < -1) v.y = -1;
+    else if (dy > 1) v.y = 1;
+
+    v = Coquette.Collider.Maths.unitVector(v);
+    v = Coquette.Collider.Maths.scaleVector(v, this.speed.walk);
+    this.center.x += v.x;
+    this.center.y += v.y;
+  }
+};
+Robot.prototype.waits = {
+  roam: function () {
+    if (!this.wanderTarget) {
+      var wanderDistance = 100;
+      this.wanderTarget = {
+        x: this.center.x + ((Math.random() * wanderDistance) - wanderDistance/2),
+        y: this.center.y + ((Math.random() * wanderDistance) - wanderDistance/2)
+      };
+      this.wanderTicks = Math.random() * 600;
+    }
+    var v = Coquette.Collider.Maths.vectorTo(this.center, this.wanderTarget);
+    v = Coquette.Collider.Maths.unitVector(v);
+    v = Coquette.Collider.Maths.scaleVector(v, 0.2);
+    this.center.x += v.x;
+    this.center.y += v.y;
+    this.wanderTicks--;
+    if (this.wanderTicks <= 0) {
+      this.wanderTarget = undefined;
+    }
+  },
+  wait: function() {}
+};
+
+// Define the Game
 var Game = function(opts) {
   opts = opts || {};
 
+  // Game colors
   var BKG_C = "#002b36";
   var PLAYER_C = "#2aa198";
   var ROBOT_C = {
     dead: "#dc322f",
     alive: "#d33682"
   };
+  
+  // Entity config
+  var PLAYER_S = { walk: 2.4, run: 3.6 };
+  var ROBOT_S = { walk: 2.6 };
+  this.robotCount = 10;
 
+  // Game play area
   this.width = 500;
-  this.height = 500;
+  this.height = 500;  
 
   this.win = opts.win || function () { console.log('You win!'); };
   this.lose = opts.lose || function () { console.log('You lose.'); };
 
+  // Check for game over each tick
   this.update = function (interval) {
     var allDead = true;
     this.c.entities.all(Person).forEach(function (person) {
@@ -236,17 +305,18 @@ var Game = function(opts) {
 
   this.c = new Coquette(this, "canvas", this.width, this.height, BKG_C, true);
 
-  // player
+  // Our intrepid player
   var player = this.c.entities.create(Person, { 
-    center: { x:256, y:110 }, 
-    speed: { walk: 2.4, run: 3.6 },
+    center: { x:this.width/2, y:this.height/2 }, 
+    speed: PLAYER_S,
     color: PLAYER_C
   });
 
-  // robots
+  // The evil robots!
   var starts = [];
-  var robots = 10;
-  for (var i=0; i<robots; i++) {
+  var wait = ['wait', 'roam', 'random'][Math.floor(Math.random() * 3)];
+  var attack = ['compass', 'direct', 'random'][Math.floor(Math.random() * 3)];
+  for (var i=0; i<this.robotCount; i++) {
     starts.push({
       x: Math.random() * 500,
       y: Math.random() * 500
@@ -255,8 +325,9 @@ var Game = function(opts) {
   starts.forEach(function (start) {
     this.c.entities.create(Robot, {
       center: start,
-      speed: { walk: 2.6 },
-      strategy: 'direct',
+      speed: ROBOT_S,
+      attackStrategy: attack,
+      waitStrategy: wait,
       colors: ROBOT_C,
       target: player
     });
@@ -272,5 +343,10 @@ window.addEventListener('load', function() {
       document.getElementById('lose').style.display = "initial";
     }
   });
+  
+  // Steal focus in viewing mode, not editing mode
+  if (window.self.frameElement.hasAttribute('allowfullscreen')) {
+    document.getElementById('canvas').focus();
+  }
 });
 </script>
