--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <dd>to teleport</dd>
 </dl>
 
+<small>By <a href="https://twitter.com/stenington">@stenington</a></small>
+
 <script>
 function showMessage(msg) {
   var el = document.getElementById('message');
