More configurability and structure

--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@ window.addEventListener('load', function() {
         dead:  "#dc322f"
       }
     },
+    sizes: {
+      player: {
+        x: 9,
+        y: 9
+      },
+      robot: {
+        x: 9,
+        y: 9
+      }
+    },
     speeds: {
       player: {
         walk: 2.4,
