Add hack section

--- a/index.html
+++ b/index.html
@@ -10,19 +10,31 @@
   <h1 id="message"></h1>
 </div>
 <p>The robots are after you! Get them to crash before they get you.</p>
-<dl>
-  <dt>▲</dt>
-  <dt>◀</dt>
-  <dt>▼</dt>
-  <dt>▶</dt>
-  <dd>to move</dd>
-  <dt>Shift</dt>
-  <dd>to run</dd>
-  <dt>Space</dt>
-  <dd>to teleport</dd>
-</dl>
+<section class="play">
+  <h2>Play</h2>
+  <dl>
+    <dt>▲</dt>
+    <dt>◀</dt>
+    <dt>▼</dt>
+    <dt>▶</dt>
+    <dd>to move</dd>
+    <dt>Shift</dt>
+    <dd>to run</dd>
+    <dt>Space</dt>
+    <dd>to teleport</dd>
+  </dl>
+</section>
+<section class="hack">
+  <h2>Hack</h2>
+  <p>Hack this version <a href="#">in Thimble</a> or follow one of these tutorials:</p>
+  <ul>
+    <li><a href="#">Add your own graphics</a> <small>Coming soon</small></li>
+    <li><a href="#">New player abilities</a> <small>Coming soon</small></li>
+    <li><a href="#">Change the robot AI</a> <small>Coming soon</small></li>
+  </ul>
+</section>
 
-<small>By <a href="https://twitter.com/stenington">@stenington</a></small>
+<small class="attribution">By <a href="https://twitter.com/stenington">@stenington</a></small>
 
 <script>
 function showMessage(msg) {
