--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<script src="http://stenington.org/roborampage/coquette.js"></script>
+<script src="coquette.js"></script>
 <script src="roborampage.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
 <link href="style.css" rel="stylesheet" type="text/css">
