Add thimble remix link

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </section>
 <section class="hack">
   <h2>Hack</h2>
-  <p>Hack this version <a href="#">in Thimble</a> or follow one of these tutorials:</p>
+  <p>Hack this version <a href="https://thimble.webmaker.org/project/59304/remix">in Thimble</a> or follow one of these tutorials:</p>
   <ul>
     <li><a href="#">Add your own graphics</a> <small>Coming soon</small></li>
     <li><a href="#">New player abilities</a> <small>Coming soon</small></li>
