Nonsense tutorial content

--- a/hacks/colors/index.html
+++ b/hacks/colors/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
-<script src="coquette.js"></script>
-<script src="roborampage.js"></script>
+<script src="../../coquette.js"></script>
+<script src="../../roborampage.js"></script>
 <link href='https://fonts.googleapis.com/css?family=Press+Start+2P' rel='stylesheet' type='text/css'>
-<link href="style.css" rel="stylesheet" type="text/css">
+<link href="../../style.css" rel="stylesheet" type="text/css">
 
 <h1>ROBORAMPAGE</h1>
 <div class="container">
