--- a/hacks/colors/tutorial.html
+++ b/hacks/colors/tutorial.html
@@ -1,4 +1,11 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
 
-Tutorial.
+<section>
+  <h1>Welcome to the tutorial!</h1>
+  <p>Let's dive right in and change some colors.</p>
+  <p>Something something line 10 is cool.</p>
+</section>
+<section>
+  <h1>DOOOOOOONE!</h1>
+</section>
