Tutorialify the tutorial

--- a/hacks/colors/tutorial.html
+++ b/hacks/colors/tutorial.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link href="//thimble.webmaker.org/learning_projects/tutorial/tutorial.css" rel="stylesheet">
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//thimble.webmaker.org/learning_projects/tutorial/tutorial.js"></script>
+<script>
+  jQuery(document).ready(function($){
+    $('body').tutorial();
+  });
+</script>
 
 <section>
   <h1>Welcome to the tutorial!</h1>
