--- a/hacks/colors/tutorial.html
+++ b/hacks/colors/tutorial.html
@@ -11,9 +11,29 @@
 
 <section>
   <h1>Welcome to the tutorial!</h1>
-  <p>Let's dive right in and change some colors.</p>
-  <p>Something something line 10 is cool.</p>
+  <p>
+    This tutorial will show you how to change the game colors using its configuration variables. 
+    You'll learn a few different ways to express colors on the web, and be able to customize
+    the game to your liking.
+  </p>
 </section>
 <section>
-  <h1>DOOOOOOONE!</h1>
+  <h1>Changeable colors</h1>
+  <p>
+    There are five colors you can control in the game:
+  </p>
+  <ol>
+    <li>the background color (line 52)</li>
+    <li>the player color while alive (line 59)</li>
+    <li>the player color when dead (line 60)</li>
+    <li>the robot color when alive (line 69)</li>
+    <li>the robot color when dead (line 70)</li>
+  </ol>
+  <p>
+    The values you see within quotes at those locations are colors, even though they may not look like it.
+    Let's try something simple to start...
+  </p>
+  <p class="do-it">
+    On line 52, change <code>"#002b36"</code> to be <code>"midnightblue"</code>.
+  </p>
 </section>
