--- a/hacks/colors/tutorial.html
+++ b/hacks/colors/tutorial.html
@@ -18,6 +18,11 @@
   code {
     color: #C41A16;
   }
+  .mauve {
+    background-color: #E0B0FF;
+    color: #673147;
+    padding: 1px 5px;
+  }
 </style>
 
 <section>
@@ -59,7 +64,7 @@
   </p>
   <p>
     That worked because <code>midnightblue</code> is a CSS color keyword. Check out 
-    <a href="http://www.w3.org/TR/css3-color/#colorunits">this page</a> to learn more
+    <a target="_blank" href="http://www.w3.org/TR/css3-color/#colorunits">this page</a> to learn more
     about the basic and extended color keywords.
   </p>
   <p>
@@ -72,13 +77,13 @@
   <h1>Other colors</h1>
   <p>
     There are other ways to talk about colors that the game can understand as well. 
-    Take another look at the <a href="http://www.w3.org/TR/css3-color/#colorunits">CSS Color Module Level 3</a>
+    Take another look at the <a target="_blank" href="http://www.w3.org/TR/css3-color/#colorunits">CSS Color Module Level 3</a>
     page I sent you to a moment ago. Anything look familiar? The section on <strong>RGB color values</strong>
     will explain what the original <code>"#002b36"</code> business was all about.
   </p>
   <p>
     Experiment for a while with expressing colors in different ways. Color keywords can only do so much
-    for you, but with RGB or HSL you can get a little more specific about the shade of mauve that would
+    for you, but with RGB or HSL you can get a little more specific about the <span class="mauve">shade of mauve</span> that would
     be just perfect for your palette!
   </p>
 </section>
@@ -91,9 +96,17 @@
   <p>
     Under the hood, the game is using an element called a <code>canvas</code> to draw everything to the screen, and
     the colors you are setting are being set as the <code>fillStyle</code> to use on that canvas. 
-    <a href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Canvas_tutorial/Applying_styles_and_colors">This
+    <a target="_blank" href="https://developer.mozilla.org/en-US/docs/Web/Guide/HTML/Canvas_tutorial/Applying_styles_and_colors">This
     MDN article</a> talks all about <code>fillStyle</code>, and as you can see, one of the things it can accept
     is a string representing a CSS color. And where do you go to learn about representing CSS colors?
-    THE <a href="http://www.w3.org/TR/css3-color/#colorunits">CSS COLOR MODULE LEVEL 3</a>!!!
+    THE <a target="_blank" href="http://www.w3.org/TR/css3-color/#colorunits">CSS COLOR MODULE LEVEL 3</a>!!!
+  </p>
+  <p>
+    Notice that <code>fillStyle</code> can take gradients or patterns as well. Working with those is a bit beyond the scope
+    of this tutorial, but if you want to you can follow the examples in the article to
+    create a gradient or a pattern and assign it where you would have assigned a color. The game canvas has the same
+    id as in the examples, so <code>var ctx = document.getElementById('canvas').getContext('2d');</code> will give you
+    the canvas drawing context you need to get started. Feel free to play around, the results may 
+    surprise you a little bit. 
   </p>
 </section>
