Finishing up draft 1 of tutorial

--- a/hacks/colors/tutorial.html
+++ b/hacks/colors/tutorial.html
@@ -110,3 +110,13 @@
     surprise you a little bit. 
   </p>
 </section>
+<section>
+  <h1>The end?</h1>
+  <p>
+    So there you go. You've styled your game, and I'm SURE IT LOOKS BEAUTIFUL!
+  </p>
+  <img src="likeit.gif" alt="I like it a lot.">
+  <p>
+    Remember that you can save your remix, and please try out the other tutorials!
+  </p>
+</section>
